--- a/Wison/angular.json
+++ b/Wison/angular.json
@@ -28,10 +28,11 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "scripts": [
+              
             ]
           },
           "configurations": {
