--- a/Wison/package.json
+++ b/Wison/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
     "ace-builds": "^1.4.12",
+    "d3-graphviz": "^2.6.1",
     "file-saver": "^2.0.5",
     "file-system": "^2.2.2",
     "jison": "^0.4.18",
